# voxpilot

./: .dockerignore  .env.example  .gitattributes  .gitignore  DOCKER.md  LICENSE  README.md  config.example.yaml  docker-compose.yml  install.ps1  pyproject.toml  run.ps1
.github/workflows/: ci.yml
docker/: Dockerfile  entrypoint.sh
scripts/: install_docker.ps1  install_shortcuts.ps1  playwright_e2e_test.py
tests/: conftest.py  test_actions.py  test_agent_loop.py  test_client.py  test_config.py  test_edgeglow.py  test_router.py  test_safety.py  test_scaling.py  test_shell.py  test_stt_contract.py  test_wakeword.py
voxpilot/: __init__.py  __main__.py  config.py  web.py
voxpilot/agent/: __init__.py  anthropic_client.py  loop.py  router.py  shell.py
voxpilot/audio/: __init__.py  recorder.py  wakeword.py
voxpilot/feedback/: __init__.py  tts.py
voxpilot/safety/: __init__.py  guard.py
voxpilot/screen/: __init__.py  actions.py  scaling.py  screenshot.py
voxpilot/stt/: __init__.py  base.py  whisper_local.py  whisper_openai.py
voxpilot/ui/: __init__.py  _aurora.py  edgeglow.py  overlay.py  overlay_tk.py  tray.py
