[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voxpilot"
version = "0.1.0"
description = "Hold-to-talk voice-controlled screen agent powered by Claude computer use on AWS Bedrock."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Soneesh Kothagundla" }]
keywords = [
    "voice",
    "assistant",
    "computer-use",
    "claude",
    "bedrock",
    "automation",
    "accessibility",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Desktop Environment",
]
dependencies = [
    "anthropic[bedrock]>=0.109",
    "faster-whisper>=1.2",
    "sounddevice>=0.5",
    "numpy>=2.0",
    "pynput>=1.8",
    "pyautogui>=0.9.54",
    "mss>=10",
    "pyttsx3>=2.99",
    "python-dotenv>=1.1",
    "PyYAML>=6",
    "Pillow>=11",
    "httpx>=0.27",
    "pystray>=0.19",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "black>=24.0",
]
e2e = [
    "playwright>=1.48",
]

[project.urls]
Homepage = "https://github.com/soneeshkothagundla/voxpilot"
Issues = "https://github.com/soneeshkothagundla/voxpilot/issues"

[project.scripts]
voxpilot = "voxpilot.__main__:main"

[tool.setuptools.packages.find]
include = ["voxpilot*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311", "py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
